--- a/ManagerM/ui_new_articulo.ui
+++ b/ManagerM/ui_new_articulo.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>842</width>
-    <height>411</height>
+    <width>1232</width>
+    <height>521</height>
    </rect>
   </property>
   <property name="font">
@@ -26,6 +26,76 @@
     <normaloff>:/Iconos/Iconos/Tune-Up_Utilities.png</normaloff>:/Iconos/Iconos/Tune-Up_Utilities.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_9">
+   <item row="2" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeType">
+        <enum>QSizePolicy::Fixed</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>10</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="0">
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <layout class="QHBoxLayout" name="horizontalLayout_3">
+       <item>
+        <spacer name="horizontalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_aceptar">
+         <property name="text">
+          <string>Aceptar</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>:/Iconos/Iconos/aceptar.png</normaloff>:/Iconos/Iconos/aceptar.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_borrar">
+         <property name="text">
+          <string>Borrar</string>
+         </property>
+         <property name="icon">
+          <iconset resource="Icons.qrc">
+           <normaloff>:/Iconos/Iconos/trash.png</normaloff>:/Iconos/Iconos/trash.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="btn_cancelar">
+         <property name="text">
+          <string>Cancelar</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+    </layout>
+   </item>
    <item row="0" column="0">
     <layout class="QGridLayout" name="gridLayout_8">
      <item row="0" column="0">
@@ -35,7 +105,7 @@
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
-         <widget class="QWidget" name="">
+         <widget class="QWidget" name="layoutWidget">
           <layout class="QGridLayout" name="gridLayout_6">
            <item row="0" column="0">
             <layout class="QGridLayout" name="gridLayout_5">
@@ -382,6 +452,26 @@
                  </property>
                 </widget>
                </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="l_grupo_2">
+                 <property name="text">
+                  <string>Grupo</string>
+                 </property>
+                 <property name="alignment">
+                  <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                 </property>
+                </widget>
+               </item>
+               <item row="2" column="1">
+                <widget class="QComboBox" name="cb_grupo"/>
+               </item>
+               <item row="2" column="2">
+                <widget class="QPushButton" name="btn_add_grupo">
+                 <property name="text">
+                  <string/>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </item>
              <item row="1" column="0">
@@ -471,7 +561,7 @@
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="2" column="0">
         <widget class="QTableWidget" name="tableWidget">
          <property name="minimumSize">
           <size>
@@ -531,208 +621,8 @@
         </widget>
        </item>
       </layout>
-     </item>	
-     <item row="2" column="0">
-      <widget class="QLabel" name="l_stock_2">
-       <property name="text">
-        <string>Stock</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="4">
-      <widget class="QLabel" name="l_grupo_2">
-       <property name="text">
-        <string>Grupo</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="5">
-      <widget class="QComboBox" name="cb_grupo"/>
-     </item>
-     <item row="2" column="1">
-      <widget class="QSpinBox" name="le_stock_2">
-       <property name="maximum">
-        <number>10000</number>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="10">
-      <widget class="QDoubleSpinBox" name="le_precio_2">
-       <property name="maximum">
-        <double>100000000.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="7">
-      <widget class="QPushButton" name="btn_add_grupo">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="6">
-      <widget class="QPushButton" name="btn_add_marca">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="Icons.qrc">
-         <normaloff>:/Iconos/Iconos/sq_plus.png</normaloff>:/Iconos/Iconos/sq_plus.png</iconset>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="6">
-      <widget class="QPushButton" name="btn_add_medida">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="icon">
-        <iconset resource="Icons.qrc">
-         <normaloff>:/Iconos/Iconos/sq_plus.png</normaloff>:/Iconos/Iconos/sq_plus.png</iconset>
-       </property>
-      </widget>
      </item>
     </layout>
-   </item>
-   <item row="2" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout_2">
-     <item>
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Fixed</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>10</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="pushButton_agregar">
-       <property name="text">
-        <string>Agregar</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="4" column="0">
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QTableWidget" name="tableWidget">
-       <property name="alternatingRowColors">
-        <bool>true</bool>
-       </property>
-       <property name="selectionBehavior">
-        <enum>QAbstractItemView::SelectRows</enum>
-       </property>
-       <column>
-        <property name="text">
-         <string>Código</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Nombre</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Grupo</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Marca</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Medida</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Stock</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Precio</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Proveedor</string>
-        </property>
-       </column>
-      </widget>
-     </item>
-     <item>
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <item>
-        <spacer name="horizontalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btn_aceptar">
-         <property name="text">
-          <string>Aceptar</string>
-         </property>
-         <property name="icon">
-          <iconset>
-           <normaloff>:/Iconos/Iconos/aceptar.png</normaloff>:/Iconos/Iconos/aceptar.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btn_borrar">
-         <property name="text">
-          <string>Borrar</string>
-         </property>
-         <property name="icon">
-          <iconset resource="Icons.qrc">
-           <normaloff>:/Iconos/Iconos/trash.png</normaloff>:/Iconos/Iconos/trash.png</iconset>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="btn_cancelar">
-         <property name="text">
-          <string>Cancelar</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </item>
-    </layout>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="l_resultado_2">
-     <property name="text">
-      <string>Artículos a registrar :</string>
-     </property>
-    </widget>
    </item>
   </layout>
  </widget>
